Rešen problem sa dubokim switchevima

--- a/petlje/CMakeLists.txt
+++ b/petlje/CMakeLists.txt
@@ -7,6 +7,10 @@ set(CMAKE_MODULE_PATH
   "${CMAKE_SOURCE_DIR}/cmake/modules"
 )
 
+
+set(CMAKE_C_COMPILER clang-11)
+set(CMAKE_CXX_COMPILER clang++-11)
+
 execute_process(
   COMMAND llvm-config-11 --cxxflags
   OUTPUT_VARIABLE LibClang_DEFINITIONS)
