--- a/trans/CMakeLists.txt
+++ b/trans/CMakeLists.txt
@@ -34,45 +34,45 @@ add_definitions(${LibClang_DEFINITIONS})
 
 include_directories(
   ${LibClang_INCLUDE_DIR}
-  ../include
+  include
 )
 
 link_directories(${LibClang_LINK_PATH})
 
-add_executable(trans trans.cpp
-                     ../include/MTKConsumer.hpp
-                     ../include/MTKContext.hpp
-                     ../source/MTKContext.cpp
-                     ../include/MTKTransformer.hpp
-                     ../source/MTKTransformer.cpp
-                     ../include/Do2ForVisitor.hpp
-                     ../source/Do2ForVisitor.cpp
-                     ../include/For2DoVisitor.hpp
-                     ../source/For2DoVisitor.cpp
-                     ../include/For2WhileVisitor.hpp
-                     ../source/For2WhileVisitor.cpp
-                     ../include/While2DoVisitor.hpp
-                     ../source/While2DoVisitor.cpp
-                     ../include/While2ForVisitor.hpp
-                     ../source/While2ForVisitor.cpp
-                     ../include/PrepForVisitor.hpp
-                     ../source/PrepForVisitor.cpp
-                     ../include/PrepIfVisitor.hpp
-                     ../source/PrepIfVisitor.cpp
-                     ../include/PrepSwitchVisitor.hpp
-                     ../source/PrepSwitchVisitor.cpp
-                     ../include/If2SwitchVisitor.hpp
-                     ../source/If2SwitchVisitor.cpp
-                     ../include/Switch2IfVisitor.hpp
-                     ../source/Switch2IfVisitor.cpp
-                     ../include/Rek2IterVisitor.hpp
-                     ../source/Rek2IterVisitor.cpp
-                     ../include/FinIterVisitor.hpp
-                     ../source/FinIterVisitor.cpp
-                     ../include/Iter2RekVisitor.hpp
-                     ../source/Iter2RekVisitor.cpp
-                     ../include/FinRekVisitor.hpp
-                     ../source/FinRekVisitor.cpp)
+add_executable(trans source/trans.cpp
+                     include/MTKConsumer.hpp
+                     include/MTKContext.hpp
+                     source/MTKContext.cpp
+                     include/MTKTransformer.hpp
+                     source/MTKTransformer.cpp
+                     include/Do2ForVisitor.hpp
+                     source/Do2ForVisitor.cpp
+                     include/For2DoVisitor.hpp
+                     source/For2DoVisitor.cpp
+                     include/For2WhileVisitor.hpp
+                     source/For2WhileVisitor.cpp
+                     include/While2DoVisitor.hpp
+                     source/While2DoVisitor.cpp
+                     include/While2ForVisitor.hpp
+                     source/While2ForVisitor.cpp
+                     include/PrepForVisitor.hpp
+                     source/PrepForVisitor.cpp
+                     include/PrepIfVisitor.hpp
+                     source/PrepIfVisitor.cpp
+                     include/PrepSwitchVisitor.hpp
+                     source/PrepSwitchVisitor.cpp
+                     include/If2SwitchVisitor.hpp
+                     source/If2SwitchVisitor.cpp
+                     include/Switch2IfVisitor.hpp
+                     source/Switch2IfVisitor.cpp
+                     include/Rek2IterVisitor.hpp
+                     source/Rek2IterVisitor.cpp
+                     include/FinIterVisitor.hpp
+                     source/FinIterVisitor.cpp
+                     include/Iter2RekVisitor.hpp
+                     source/Iter2RekVisitor.cpp
+                     include/FinRekVisitor.hpp
+                     source/FinRekVisitor.cpp)
 
 target_link_libraries(trans libLLVM-11.so
                             libclangTooling.a
